# sci-animation

./: .gitignore  AGENTS.md  DEPENDENCIES.md  README.md  c.md  manim.cfg  pyproject.toml
docs/jobs/: README.md  animation-library-foundation-refactor.md
docs/legacy/: README.md
docs/reports/: INDEX.md  galton-board.md  monte-carlo-method.md  simulation-theory-overview.md
docs/specs/: ARCHITECTURE.md  BLUEPRINT.md  ROADMAP.md
docs/theory/: README.md
docs/work-notes/: 01_ANIMATION_LIBRARY_BOOTSTRAP_SUMMARY_2026-05-28.md  02_ANIMATION_LIBRARY_AND_RESEARCH_OS_EXPANSION_SUMMARY_2026-05-29.md  INDEX.md
examples/replay/: three_story_sample.csv
scenes/: _helpers.py  crank_rocker.py  galton_board.py  monte_carlo_pi.py  replay_time_response.py  spring_oscillator.py  three_story_earthquake.py
src/mechanisms/: __init__.py  four_bar.py  galton_board.py  monte_carlo.py  oscillator.py  shear_building.py
src/sci_animation/: __init__.py
src/sci_animation/models/: __init__.py  four_bar.py  galton_board.py  monte_carlo.py  oscillator.py  shear_building.py
src/sci_animation/replay/: __init__.py  csv_time_response.py
src/sci_animation/schemas/: __init__.py  geometry.py  time_response.py
src/sci_animation/solvers/: __init__.py  newmark.py
src/sci_animation/viz/: __init__.py  mechanical.py  readout.py  structures.py  time_history.py
