[project]
name = "sci-animation"
version = "0.1.0"
description = "Manim-based science and mechanical mechanism animations."
requires-python = ">=3.11"
dependencies = [
    "manim>=0.19.0",
    "numpy>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

